--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ function update() {
     }
 
     //  Allow the player to jump if they are touching the ground.
-    if (cursors.up.isDown & analog stick .up.isDown& player.body.touching.down)
+    if (cursors.up.isDown && player.body.touching.down)
     {
         player.body.velocity.y = -350;
     }
