--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en"> 
 <head> 
   <meta charset="UTF-8" />
-    <title>Phaser - Making your first game, part 7</title>
+    <title>Basket Fight</title>
   <script type="text/javascript" src="js/phaser.min.js"></script>
     <style type="text/css">
         body {
@@ -13,106 +13,113 @@
 <body>
 
 <script type="text/javascript">
-
 var game = new Phaser.Game(800, 600, Phaser.AUTO, '', { preload: preload, create: create, update: update });
-
 function preload() {
-
     game.load.image('sky', 'assets/sky2.png');
     game.load.image('ground', 'assets/platform.png');
     game.load.spritesheet('dude', 'assets/bill.png', 32, 48);
-
+    game.load.spritesheet('ball', 'assets/ball.png', 32, 32);
 }
-
 var player;
 var platforms;
 var cursors;
-
+var ball;
+var pad1;
+window.addEventListener("gamepadconnected", function(e) {
+    console.log("Gamepad connected at index %d: %s. %d buttons, %d axes.",
+    e.gamepad.index, e.gamepad.id,
+    e.gamepad.buttons.length, e.gamepad.axes.length);
+});
 function create() {
-
     //  We're going to be using physics, so enable the Arcade Physics system
     game.physics.startSystem(Phaser.Physics.ARCADE);
-
     //  A simple background for our game
     game.add.sprite(0, 0, 'sky');
-
+    game.input.gamepad.start();
+    // To listen to buttons from a specific pad listen directly on that pad game.input.gamepad.padX, where X = pad 1-4
+    pad1 = game.input.gamepad.pad1;
+    console.log(pad1);
+    game.input.onDown.add(dump, this);
     //  The platforms group contains the ground and the 2 ledges we can jump on
     platforms = game.add.group();
-
+    base = game.add.group();
+    items = game.add.group();
     //  We will enable physics for any object that is created in this group
     platforms.enableBody = true;
-
+    base.enableBody = true;
+    items.enableBody = true;
     // Here we create the ground.
-    var ground = platforms.create(0, game.world.height - 64, 'ground');
-
+    var ground = base.create(0, game.world.height - 64, 'ground');
     //  Scale it to fit the width of the game (the original sprite is 400x32 in size)
     ground.scale.setTo(2, 2);
-
     //  This stops it from falling away when you jump on it
     ground.body.immovable = true;
-
+    ball = items.create(200, 200, 'ball');
+    game.physics.arcade.enable(ball);
+    ball.body.bounce.y = 1;
+    ball.body.gravity.y = 300;
+    ball.body.collideWorldBounds = true;
     //  Now let's create two ledges
-    var ledge = platforms.create(400, 400, 'ground');
+    var ledge = platforms.create(700, 200, 'ground');
     ledge.body.immovable = true;
-
-    ledge = platforms.create(-150, 250, 'ground');
+    ledge.scale.setTo(0.05,19);
+    ledge = platforms.create(50, 200, 'ground');
     ledge.body.immovable = true;
-
+    ledge.scale.setTo(0.05,19);
+    var rim = platforms.create(660, 250, 'ground');
+    rim.body.immovable = true;
+    rim.scale.setTo(0.1,0.10);
+    rim = platforms.create(70, 250, 'ground');
+    rim.body.immovable = true;
+    rim.scale.setTo(0.1,0.10);
     // The player and its settings
     player = game.add.sprite(32, game.world.height - 150, 'dude');
-
     //  We need to enable physics on the player
     game.physics.arcade.enable(player);
-
     //  Player physics properties. Give the little guy a slight bounce.
     player.body.bounce.y = 0.2;
     player.body.gravity.y = 300;
     player.body.collideWorldBounds = true;
-
     //  Our two animations, walking left and right.
     player.animations.add('left', [0, 1, 2, 3], 10, true);
     player.animations.add('right', [5, 6, 7, 8], 10, true);
-
     //  Our controls.
     cursors = game.input.keyboard.createCursorKeys();
 }
-
+function dump() {
+  console.log(pad1._axes[0]);
+  console.log(pad1._rawPad.axes[0]);
+}
 function update() {
-
     //  Collide the player and the stars with the platforms
-    game.physics.arcade.collide(player, platforms);
-
+    game.physics.arcade.collide(player, base);
+    game.physics.arcade.collide(player, ball);
+    game.physics.arcade.collide(base, ball);
     //  Reset the players velocity (movement)
     player.body.velocity.x = 0;
-
-    if (cursors.left.isDown)
+    if (navigator.getGamepads()[0].buttons[13].pressed || cursors.left.isDown)
     {
         //  Move to the left
-        player.body.velocity.x = -150;
-
+        player.body.velocity.x = -666;
         player.animations.play('left');
     }
-    else if (cursors.right.isDown)
+    else if (navigator.getGamepads()[0].buttons[14].pressed || cursors.right.isDown)
     {
         //  Move to the right
-        player.body.velocity.x = 450;
-
+        player.body.velocity.x = 666;
         player.animations.play('right');
     }
     else
     {
         //  Stand still
         player.animations.stop();
-
         player.frame = 4;
     }
-
     //  Allow the player to jump if they are touching the ground.
-    if (cursors.up.isDown && player.body.touching.down)
+    if (navigator.getGamepads()[0].buttons[0].pressed || cursors.up.isDown && player.body.touching.down)
     {
-        player.body.velocity.y = -350;
+        player.body.velocity.y = -390;
     }
-
 }
 </script>
 
